title color change

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,7 +145,7 @@ table {
 .title {
   text-align: center;
   font-size: 40px;
-  color: burlywood;
+  color: #b2792f;
   font-family: 'Courier New', Courier, monospace;
   font-weight: 700;
 }
