--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,7 +131,7 @@ table {
 /* custom style */
 .gallerycontainer {
   background: linear-gradient(90deg, rgb(106 82 205) 0%, rgb(98 149 223) 86%);
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   min-width: 950px;
 }
@@ -159,8 +159,8 @@ table {
   display: inline-block;
   border: solid 10px #ffffff;
   border-radius: 10px;
-  width: 182px;
-  height: 200px;
+  width: 189px;
+  height: 126px;
   margin: 8px;
   box-shadow: 3px 6px 2px rgba(0, 0, 0, .3);
 }
