--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,14 +132,12 @@ table {
 .gallerycontainer {
   background: linear-gradient(90deg, rgb(106 82 205) 0%, rgb(98 149 223) 86%);
   min-height: 100vh;
-  width: 100vw;
-  min-width: 950px;
+  min-width: 490px;
 }
 
 .gallery {
-  width: 900px;
   padding: 20px;
-  margin: auto;
+  margin: auto 15%;
 }
 
 .title {
@@ -159,8 +157,8 @@ table {
   display: inline-block;
   border: solid 10px #ffffff;
   border-radius: 10px;
-  width: 189px;
-  height: 126px;
+  width: 264px;
+  height: 176px;
   margin: 8px;
   box-shadow: 3px 6px 2px rgba(0, 0, 0, .3);
 }
