--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,147 +1,19 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
 body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+  margin: 0px;
 }
 
-/* custom style */
 .gallerycontainer {
   background: linear-gradient(90deg, rgb(106 82 205) 0%, rgb(98 149 223) 86%);
-  min-height: 100vh;
 }
 
 .gallery {
   padding: 20px;
-  margin: auto 5%;
+  margin: auto 10px;
 }
 
 .title {
   text-align: center;
-  font-size: 40px;
+  font-size: 2.5em;
   color: #ffdaa9;
   font-family: 'Courier New', Courier, monospace;
   font-weight: 700;
@@ -149,21 +21,23 @@ table {
 
 .container {
   font-size:  0px;
-  padding: 0px;
   margin-top: 40px;
-}
-.imgbox {
-  display: inline-block;
-  border: solid 10px #ffffff;
-  border-radius: 10px;
-  width: 318px;
-  height: 236px;
-  margin: 8px;
-  box-shadow: 3px 6px 2px rgba(0, 0, 0, .3);
-  max-width: 70vw;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 img {
-  width: 100%;
-  height: 100%;
+  /* below code for responssive image content */
+  max-inline-size: 100%;
+  block-size: auto;
+  aspect-ratio: 3/2;
+  object-fit: cover;
+  object-position: top center;
+
+  /* below code for border design */
+  border: solid 8px #ffffff;
+  border-radius: 8px;
+  box-shadow: 3px 6px 2px rgba(0, 0, 0, .3);
+  margin: 8px;
 }
